syntax = "proto3";

package api.v1;

import "buf/validate/validate.proto";
import "google/protobuf/empty.proto";

import "components.proto";

service DeviceService {
  rpc SetDisabled(SetDisabledRequest) returns (google.protobuf.Empty) {}

  rpc PositionMode(PositionModeRequest) returns (PositionModeResponse) {}

  rpc SetPositionMode(SetPositionModeRequest) returns (google.protobuf.Empty) {}

  rpc SetPosition(SetPositionRequest) returns (google.protobuf.Empty) {}
}

message SetDisabledRequest {
  optional string device_id = 1 [(buf.validate.field).required = true, (buf.validate.field).string.uuid = true];
  optional bool disabled = 2 [(buf.validate.field).required = true];
}

message PositionModeRequest {
  optional string device_id = 1 [(buf.validate.field).required = true, (buf.validate.field).string.uuid = true];
}

message PositionModeResponse {
  optional GeoPositionMode position_mode = 1 [(buf.validate.field).required = true];
}

message SetPositionModeRequest {
  optional string device_id = 1 [(buf.validate.field).required = true, (buf.validate.field).string.uuid = true];
  optional GeoPositionMode position_mode = 2 [(buf.validate.field).required = true];
}

message SetPositionRequest {
  optional string device_id = 1 [(buf.validate.field).required = true, (buf.validate.field).string.uuid = true];
  optional GeoPosition position = 2 [(buf.validate.field).required = true];
}


